--- a/anmol_tomer_overleaf_resume.tex
+++ b/anmol_tomer_overleaf_resume.tex
@@ -102,18 +102,22 @@
 
     \resumeSubheading
       {CRED}{Bengaluru, IN}
-      {Backend Engineer}{June 2022 -- Present}
+      {Backend Engineer}{September 2021 -- Present}
       \resumeItemListStart
         \resumeItem{\textbf{Backend Engineer, Payments Platform} (June 2023 -- Present)}
         \resumeItemListStart
-            \resumeItem{Worked on Payments Loading, Merchant Onboarding and Compliance.}
-            \resumeItem{Owned UPI and Payment Provider Integrations.}
+            \resumeItem{Spearheaded development of in-house VPA creation by integrating \textbf{Axis UPI APIs}. Reduced the \textbf{VPA creation TAT from 14 days to real-time} by identifying gaps in ops and banking partnership processes.}
+            \resumeItem{Worked on Payments Loading to integrate various payment gateways viz \textbf{Razorpay}, 
+            \textbf{payU}, \textbf{Cybersource} etc. to build robust payment rails.}
+            \resumeItem{Designed the \textbf{workflows for onboarding merchants} on internal microservices in an automated manner using \textbf{AWS Step Functions}, \textbf{SQS}. Reduced the merchant integration TAT from \textbf{4-5 days to 2 hours} for custom integration and for \textbf{Shopify/Gokwik} merchants from \textbf{2 days to 5 minutes}.}
+            \resumeItem{Worked on kyc verification and document migration modules, critical to ensuring merchants are being onboarded in a compliant manner as per regulator guidelines.}
         \resumeItemListEnd
+        \vspace{\baselineskip}
         \resumeItem{\textbf{Product \& Partner Engineering} (September 2021 -- June 2023)}
          \resumeItemListStart
-            \resumeItem{Contributed to building CRED pay.}
-            \resumeItem{Owned sales engineering, merchant integration and onboarding automation.}
-            \resumeItem{Operated in a multi-stakeholder role, working closely with product, business, tech and ops teams.}
+            \resumeItem{Created self-serve documentation portal for the merchant onboarding using \textbf{SwaggerUI}.}
+            \resumeItem{Owned \textbf{sales engineering for CRED pay}, went on calls with merchant tech teams, responsible for seamless integration and go live of the product. Oversaw integration of CRED pay on 300+ brands like \textbf{Zomato, BigBasket, Zepto, IRCTC}.}
+            \resumeItem{Operated in a multi-stakeholder role, working closely with \textbf{product}, \textbf{business}, \textbf{tech} and ops teams.}
         \resumeItemListEnd
       \resumeItemListEnd
 
@@ -138,22 +142,39 @@
      \href{https://github.com/AnmolTomer/iPark}{\textbf{Github Link}} | \href{https://www.youtube.com/watch?v=3VMOG8u6cUI}{\textbf{Project DEMO}}
     \resumeSubItem{Custom Object Detection for Autonomous Rover}{Built a model for custom object detection using the Darknet Neural Network Framework for the Indian Rover Challenge 2020.}
   \resumeSubHeadingListEnd
-
+    \\[1em]
 %--------SKILLS------------
-\section{Skills}
+\section{TECHNICAL SKILLS}
   \resumeSubHeadingListStart
     \item{
       \textbf{Languages: }{C/C++ (STL), Java, Python, SQL, JavaScript/Node.js}
     }
     \item{
-      \textbf{Frameworks \& Libraries: }{FastAPI, Django, Flask, Pandas, Express.js}
+      \textbf{Frameworks \& Libraries: }{Spring, Spring Boot, FastAPI, Flask, Hibernate, Pandas, Express.js}
     }
     \item{
-      \textbf{Databases: }{MySQL, MongoDB, Redis, AWS DynamoDB}
+      \textbf{Databases: }{MySQL, MongoDB, Redis, DynamoDB}
     }
     \item{
-      \textbf{Cloud \& DevOps Tools: }{AWS (EC2, S3, SQS, Lambda, Step Functions), Docker, Datadog, Jenkins, Grafana (Loki), Git}
+      \textbf{Architectures: }{Microservices, Event-Driven Architecture, Distributed Systems, Domain-Driven Design}
     }
+    \item{
+      \textbf{Developer Tools: }{Git, Spring Tool Suite, Postman, Eclipse, Bash}
+    }
+    \item{
+      \textbf{Cloud \& DevOps Tools: }{AWS (EC2, S3, SQS, Lambda, Step Functions), Docker, Datadog, Jenkins, Grafana (Loki)}
+    }
+  \resumeSubHeadingListEnd
+
+% -----------------AWARDS and POSITIONS HELD -------------------
+
+\section{AWARDS AND POSITIONS HELD}
+  \resumeSubHeadingListStart
+    \resumeSubItem{\textbf{Team Techbotics} - \textbf{Winner} of TechnoVIT 2019 Hackathon}{Developed a \textbf{wireless IoT bot} for remote / hazardous areas, featuring voice / application-controlled navigation, environmental sensors, and live video streaming with \textbf{YOLO-based object detection}. Integrated dual Android apps for control and a \textbf{cloud portal for real-time video access}, securing first place in the Makeathon.}
+    \\[1em]
+     \resumeSubItem{\textbf{VIThink, Core Committee Member}}{As core member of AI and Data Science Society, led event planning and conducted workshops at VIThink, focusing on Python, data analysis, and machine learning, while enhancing skills in pandas, seaborn, scikit-learn, and NumPy.} 
+     \\[1em]
+    \resumeSubItem{\textbf{Indian Rover Challenge 2020 - Best Emerging Team}}{Implemented custom object detection using YOLOv3 (trained via Darknet framework) for autonomous navigation in the Indian Rover Challenge 2020. Annotated a domain-specific dataset, optimized model parameters, and deployed it on an embedded rover system.}
   \resumeSubHeadingListEnd
 
 \end{document}
