trim down section.

--- a/anmol_tomer_overleaf_resume.tex
+++ b/anmol_tomer_overleaf_resume.tex
@@ -98,51 +98,33 @@
 
 %-----------EXPERIENCE-----------------
 \section{Experience}
-  \resumeSubHeadingListStart
-
     \resumeSubheading
       {CRED}{Bengaluru, IN}
-      {Backend Engineer}{September 2021 -- Present}
+      {}{}
       \resumeItemListStart
         \resumeItem{\textbf{Backend Engineer, Payments Platform} (June 2023 -- Present)}
         \resumeItemListStart
-            \resumeItem{Spearheaded development of in-house VPA creation by integrating \textbf{Axis UPI APIs}. Reduced the \textbf{VPA creation TAT from 14 days to real-time} by identifying gaps in ops and banking partnership processes.}
+            \resumeItem{Spearheaded development of in-house VPA creation by integrating \textbf{Axis UPI APIs}. Reduced the \textbf{merchant UPI id (VPA) creation TAT from 14 days to real-time} by identifying and eliminating gaps in ops and banking partnership processes.}
             \resumeItem{Worked on Payments Loading to integrate various payment gateways viz \textbf{Razorpay}, 
             \textbf{payU}, \textbf{Cybersource} etc. to build robust payment rails.}
             \resumeItem{Designed the \textbf{workflows for onboarding merchants} on internal microservices in an automated manner using \textbf{AWS Step Functions}, \textbf{SQS}. Reduced the merchant integration TAT from \textbf{4-5 days to 2 hours} for custom integration and for \textbf{Shopify/Gokwik} merchants from \textbf{2 days to 5 minutes}.}
-            \resumeItem{Worked on kyc verification and document migration modules, critical to ensuring merchants are being onboarded in a compliant manner as per regulator guidelines.}
+            \resumeItem{Integrated Karza APIs and designed kyc verification flows and document migration scripts, critical to ensuring merchants are being onboarded in a compliant manner as per regulator guidelines.}
         \resumeItemListEnd
-        \vspace{\baselineskip}
-        \resumeItem{\textbf{Product \& Partner Engineering} (September 2021 -- June 2023)}
+        \resumeItem{\textbf{Product \& Partner Engineering} (June 2022 -- June 2023)}
          \resumeItemListStart
             \resumeItem{Created self-serve documentation portal for the merchant onboarding using \textbf{SwaggerUI}.}
-            \resumeItem{Owned \textbf{sales engineering for CRED pay}, went on calls with merchant tech teams, responsible for seamless integration and go live of the product. Oversaw integration of CRED pay on 300+ brands like \textbf{Zomato, BigBasket, Zepto, IRCTC}.}
+            \resumeItem{Enhanced API documentation and created SOPs for known issues to streamline the ops effort and save product/tech bandwidth on recurring issues.}
             \resumeItem{Operated in a multi-stakeholder role, working closely with \textbf{product}, \textbf{business}, \textbf{tech} and ops teams.}
+        \resumeItemListEnd
+      
+      \vspace{\baselineskip}
+      \resumeItem{\textbf{Product \& Partner Engineering Intern} (Sep 2021 -- June 2022)}
+         \resumeItemListStart
+            \resumeItem{Wrote \textbf{python automation scripts} on AWS Lambda, as well as internal tools to debug issues in payment services and reduce refund completion TAT.}
+            \resumeItem{Owned \textbf{sales engineering for CRED pay}, went on calls with merchant tech teams, responsible for seamless integration and go live of the product. Oversaw integration of CRED pay on 400+ brands like \textbf{Zomato, BigBasket, Zepto, IRCTC}.}
         \resumeItemListEnd
       \resumeItemListEnd
 
-    \resumeSubheading
-      {Nokia Networks and Solutions}{Chennai, IN}
-      {Data Science Intern}{May 2019 -- June 2019}
-      \resumeItemListStart
-        \resumeItem{Analyzed patterns in the usage of spare parts from historical data.}
-        \resumeItem{Performed extensive Data Cleaning and Exploratory Data Analysis to assess usage patterns and estimate the lifespan of spare parts.}
-        \resumeItem{Built Machine Learning models to predict the ideal order size for various shop floor components.}
-        \resumeItem{Presented and demonstrated solutions to senior executives.}
-      \resumeItemListEnd
-
-  \resumeSubHeadingListEnd
-
-
-%-----------PROJECTS-----------------
-\section{Projects}
-  \resumeSubHeadingListStart
-    \resumeSubItem{V.A.N.I. -- Voice Analytics Interface}{Worked on a project to detect dyslexia in children at an early stage, by determining their reading age. Worked with NGOs and schools for gifted children on this project, final outcome led to a filed patent for the application. \href{https://patentscope.wipo.int/search/en/detail.jsf?docId=IN276072258&tab=NATIONALBIBLIO}{\textbf{Patent Link}}}
-     \resumeSubItem{iPark -- Intelligent Parking System}{A solution to the problem of diminishing parking spaces in urban areas using Deep Learning and Computer Vision. Qualified as Top 30 for on-site finals out of 600 teams in the hackathon hosted by IISc Bangalore.} 
-     \href{https://github.com/AnmolTomer/iPark}{\textbf{Github Link}} | \href{https://www.youtube.com/watch?v=3VMOG8u6cUI}{\textbf{Project DEMO}}
-    \resumeSubItem{Custom Object Detection for Autonomous Rover}{Built a model for custom object detection using the Darknet Neural Network Framework for the Indian Rover Challenge 2020.}
-  \resumeSubHeadingListEnd
-    \\[1em]
 %--------SKILLS------------
 \section{TECHNICAL SKILLS}
   \resumeSubHeadingListStart
@@ -172,9 +154,9 @@
   \resumeSubHeadingListStart
     \resumeSubItem{\textbf{Team Techbotics} - \textbf{Winner} of TechnoVIT 2019 Hackathon}{Developed a \textbf{wireless IoT bot} for remote / hazardous areas, featuring voice / application-controlled navigation, environmental sensors, and live video streaming with \textbf{YOLO-based object detection}. Integrated dual Android apps for control and a \textbf{cloud portal for real-time video access}, securing first place in the Makeathon.}
     \\[1em]
-     \resumeSubItem{\textbf{VIThink, Core Committee Member}}{As core member of AI and Data Science Society, led event planning and conducted workshops at VIThink, focusing on Python, data analysis, and machine learning, while enhancing skills in pandas, seaborn, scikit-learn, and NumPy.} 
+     \resumeSubItem{\textbf{VIThink, Core Committee Member}}{As a core member of AI and Data Science Society, led event planning and conducted workshops at VIThink, focusing on Python, data analysis, and machine learning, while enhancing skills in \textbf{pandas, seaborn, scikit-learn, and NumPy}.} 
      \\[1em]
-    \resumeSubItem{\textbf{Indian Rover Challenge 2020 - Best Emerging Team}}{Implemented custom object detection using YOLOv3 (trained via Darknet framework) for autonomous navigation in the Indian Rover Challenge 2020. Annotated a domain-specific dataset, optimized model parameters, and deployed it on an embedded rover system.}
+    \resumeSubItem{\textbf{Indian Rover Challenge 2020 - Best Emerging Team}}{Implemented custom object detection using \textbf{YOLOv3} (trained via \textbf{Darknet framework}) for autonomous navigation in the Indian Rover Challenge 2020. Annotated a domain-specific dataset, optimized model parameters, and deployed it on an embedded rover system.}
   \resumeSubHeadingListEnd
 
 \end{document}
